Fixed bug https://github.com/neayi/tripleperformance/issues/213 - the z-index of the sticky footer was too large

--- a/_interactions.scss
+++ b/_interactions.scss
@@ -164,7 +164,7 @@
     bottom          : 0;
     color           : #ffffffcf;
     max-width       : inherit !important;
-    z-index         : 15;
+    z-index         : 1;
 
     a {
         color          : #ffffffcf;
